// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when all buttons 1`] = `
<div
  class="roll-group"
  data-testid="roll-group"
>
  <div
    class="rolls"
  >
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
      >
        —
      </div>
      <button
        class="button positive"
        style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
        type="button"
      >
        Roll
      </button>
    </div>
  </div>
  <div>
    <button
      class="button negative"
      disabled=""
      style="font-size: 0.7rem; padding: 0.3rem; margin: 1rem;"
      type="button"
    >
      Reset Group
    </button>
    <button
      class="button positive"
      disabled=""
      style="font-size: 0.7rem; padding: 0.3rem; margin: 0.25rem;"
      type="button"
    >
      Apply Ability Scores
    </button>
  </div>
</div>
`;

exports[`renders correctly when all score with abilities assigned 1`] = `
<div
  class="roll-group"
  data-testid="roll-group"
>
  <div
    class="rolls"
  >
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        12
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-0"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-0-button"
          type="button"
        >
          WIS
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="WIS"
          class="list"
          data-testid="roll-0-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-0-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        18
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-1"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-1-button"
          type="button"
        >
          STR
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="STR"
          class="list"
          data-testid="roll-1-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-1-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        8
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          1
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-2"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-2-button"
          type="button"
        >
          CHA
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="CHA"
          class="list"
          data-testid="roll-2-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-2-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        13
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-3"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-3-button"
          type="button"
        >
          INT
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="INT"
          class="list"
          data-testid="roll-3-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-3-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        13
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          1
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-4"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-4-button"
          type="button"
        >
          DEX
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="DEX"
          class="list"
          data-testid="roll-4-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-4-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        10
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-5"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-5-button"
          type="button"
        >
          CON
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="CON"
          class="list"
          data-testid="roll-5-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-5-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <button
      class="button negative"
      style="font-size: 0.7rem; padding: 0.3rem; margin: 1rem;"
      type="button"
    >
      Reset Group
    </button>
    <button
      class="button positive"
      style="font-size: 0.7rem; padding: 0.3rem; margin: 0.25rem;"
      type="button"
    >
      Apply Ability Scores
    </button>
  </div>
</div>
`;

exports[`renders correctly when all scores 1`] = `
<div
  class="roll-group"
  data-testid="roll-group"
>
  <div
    class="rolls"
  >
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        12
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-0"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-0-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-0-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-0-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-0-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        18
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          6
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-1"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-1-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-1-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-1-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-1-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        8
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          1
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-2"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-2-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-2-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-2-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-2-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        13
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-3"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-3-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-3-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-3-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-3-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        13
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          5
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          1
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-4"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-4-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-4-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-4-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-4-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
    <div
      class="display-container"
      data-testid="roll-display"
    >
      <div
        class="total"
        data-testid="roll-total"
      >
        10
      </div>
      <div
        class="rolls"
      >
        <div
          class="roll"
          data-testid="roll-die"
        >
          4
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          3
        </div>
        <div
          class="roll"
          data-testid="roll-die"
        >
          2
        </div>
      </div>
      <div
        class="container"
        data-testid="roll-5"
        style="font-size: 1.5rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="roll-5-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="roll-5-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="roll-5-data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-str"
            role="option"
            tabindex="0"
          >
            STR
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-dex"
            role="option"
            tabindex="0"
          >
            DEX
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-con"
            role="option"
            tabindex="0"
          >
            CON
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-int"
            role="option"
            tabindex="0"
          >
            INT
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-wis"
            role="option"
            tabindex="0"
          >
            WIS
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="roll-5-data-cha"
            role="option"
            tabindex="0"
          >
            CHA
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div>
    <button
      class="button negative"
      style="font-size: 0.7rem; padding: 0.3rem; margin: 1rem;"
      type="button"
    >
      Reset Group
    </button>
    <button
      class="button positive"
      disabled=""
      style="font-size: 0.7rem; padding: 0.3rem; margin: 0.25rem;"
      type="button"
    >
      Apply Ability Scores
    </button>
  </div>
</div>
`;
